--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>1.7.25</version>
         </dependency>
 
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>2.9.0</version>
+        </dependency>
+
 
     </dependencies>
 
